

bazel_dep(name = "rules_python", version = "0.31.0", dev_dependency = True)
bazel_dep(name = "rules_rust", version = "0.42.1", dev_dependency = True)

bazel_dep(name = "aspect_rules_py", version = "0.7.2")


python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.75.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")
